force-app/main/default/objects/Lead/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <description>The Campaign batch associated with the Lead.</description>
    <inlineHelpText>The Campaign batch associated with the Lead.</inlineHelpText>
    <label>Batch</label>
    <length>30</length>
    <type>Text</type>
</CustomField>