force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The category for which the author is known for.</description>
    <inlineHelpText>The category for which the author is known for.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContentCategories</valueSetName>
    </valueSet>
</CustomField>