force-app/main/default/objects/Lead/fields/ImageSource__c.field-meta.xml
<CustomField>
    <fullName>ImageSource__c</fullName>
    <inlineHelpText>Prospective author's image source for featuring one of their photos in initial outreach email</inlineHelpText>
    <label>Image Source</label>
    <type>Url</type>
</CustomField>