force-app/main/default/objects/Lead/fields/Incentivized__c.field-meta.xml
<CustomField>
    <fullName>Incentivized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the author has been incentivized.</description>
    <inlineHelpText>This field indicates if the author has been incentivized.</inlineHelpText>
    <label>Incentivized</label>
    <type>Checkbox</type>
</CustomField>