force-app/main/default/objects/Lead/fields/PortfolioURL__c.field-meta.xml
<CustomField>
    <fullName>PortfolioURL__c</fullName>
    <description>The portfolio url for the lead.</description>
    <inlineHelpText>The portfolio url for the lead.</inlineHelpText>
    <label>Portfolio URL</label>
    <type>Url</type>
</CustomField>