force-app/main/default/objects/Lead/fields/TaxInformation__c.field-meta.xml
<CustomField>
    <fullName>TaxInformation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Information</label>
    <type>Checkbox</type>
</CustomField>