force-app/main/default/objects/Lead/recordTypes/ExternalAuthorProspects.recordType-meta.xml
<RecordType>
    <fullName>ExternalAuthorProspects</fullName>
    <active>true</active>
    <businessProcess>External Author Prospects</businessProcess>
    <description>Record type for external author prospects</description>
    <label>External Author Prospects</label>
</RecordType>